--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 axum = "0.7.3"
 serde = { version = "1.0.194", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+tower-http = { version = "0.5.0", features = ["cors"] }
